# EchoVault-FLAC-Enhancer

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
echovault_flac_enhancer/: __init__.py  batch.py  cli.py  inference.py  model_manager.py  ui.py
echovault_flac_enhancer/data/: manifest.json  requirements-onnx.txt
tests/: conftest.py  test_batch.py  test_cli.py  test_integration_slow.py  test_model_manager.py  test_run_single_file.py  test_ui.py
tests/fixtures/: fake_inference.py
